@@ -13,7 +13,6 @@ sub new {
     bless ($this, $class);
     $this->updatePrologFreq();
     $this->saveNextTime();
-    $this->displaySupportLog();
 
     return $this;
 }
@@ -23,7 +22,7 @@ sub isInventoryAsked {
 
     my $parsedContent = $self->getParsedContent(['OPTION','PARAM']);
     if ($parsedContent && exists ($parsedContent->{RESPONSE}) && $parsedContent->{RESPONSE} =~ /^SEND$/) {
-	    return 1;
+       return 1;
     }
 
     0
@@ -91,19 +90,6 @@ sub saveNextTime {
     
     if ($self->{config}->{cron}) {
         $logger->info ("Next inventory after ".localtime($time));
-    }
-}
-
-sub displaySupportLog {
-    my $self = shift;
-    my $logger = $self->{logger};
-
-    my $parsedContent = $self->getParsedContent(['OPTION','PARAM']);
-
-    if ($parsedContent->{SUPPORT_LOG}) {
-        $logger->info("$parsedContent->{SUPPORT_LOG}")
-    } else {
-        $logger->info("No support detected. Registration key: N/A");
     }
 }
 
